clean style format

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
            Multiple lines will require custom code not provided by Bootstrap. -->
       <div class="masthead">
 
-        <h3 class="text-muted">Software Engineer</h3>
+        <h3 class="text-muted">Software Engineer i think</h3>
 
         <nav>
-          <ul class="nav nav-justified">
+          <ul class="nav nav-tabs nav-justified">
             <li class="active"><a href="#">Projects</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
@@ -54,7 +54,8 @@
       <div class="jumbotron">
         <h1>Danny Padilla</h1>
         <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet.</p>
-
+        <hr class="my-4">
+        <p>What is this</p>
       </div>
 
       <!-- Example row of columns -->
@@ -69,12 +70,14 @@
 
         <div class="col-lg-4">
           <h2>Project 2</h2>
+          <p class="text-primary">This is some text so that you can read it out loud for someone to hear.</p>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
        </div>
 
         <div class="col-lg-4">
           <h2>Project 3</h2>
+          <p class="text-success">This is some text so that you can read it out loud for someone to hear.</p>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
           <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
         </div>
