--- a/index.html
+++ b/index.html
@@ -76,10 +76,25 @@
        </div>
 
         <div class="col-lg-4">
-          <h2>Project 3</h2>
+          <h2>Gate Detection</h2>
           <p class="text-success">This is some text so that you can read it out loud for someone to hear.</p>
+          <div class="col-xs-6 col-md-6">
+            <a href="#" class="thumbnail">
+              <img src="img/front08.jpg" alt="...">
+            </a>
+          </div>
+          <div class="col-xs-6 col-md-6">
+            <a href="#" class="thumbnail">
+              <img src="img/front11.jpg" alt="...">
+            </a>
+          </div>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
-          <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
+          <div class="col-xs-6 col-md-6">
+            <p><a class="btn btn-primary" href="#" role="button">View Demo &raquo;</a></p>
+          </div>
+          <div class="col-xs-6 col-md-6">
+            <p><a class="btn btn-primary" href="#" role="button">View Source &raquo;</a></p>
+          </div>
         </div>
 
       </div>
