add resume link

--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
 
         <nav>
           <ul class="nav nav-tabs nav-justified">
-            <li class="active"><a href="#">Projects</a></li>
-            <li><a href="#">About</a></li>
+            <li class="active"><a href="#">About</a></li>
+	    <li><a href="#">Projects</a></li>
             <li><a href="#">Contact</a></li>
+            <li><a href="files/resume/DannyPadilla_resume.pdf">Resume</a></li>
           </ul>
         </nav>
 
