add graffiti report prj

--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
   <div class="container">
     <div id="projects" class="row">
       <div class="col-lg-4">
-        <h2>Template</h2>
-        <p class="text-danger">This is some text so that you can read it out loud for someone to hear.</p>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-        <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
+        <h2>Graffiti Report</h2>
+        <p class="text-danger">Upload images of graffiti and acquire GPS location then use images for machine learning to train and recognize graffiti</p>
+        <p>After uploading images and location of graffiti, the information is added to a database while the images are preprocessed and used for machine learning. A classifier is built and trained to recognize graffiti letters. The information can then be used to map and locate hot spots of common graffiti locations.</p>
+        <p><a class="btn btn-primary" href="https://github.com/dannypadilla/Graffiti-Locator" target="_blank" role="button">View details &raquo;</a></p>
       </div>
 
       <div class="col-lg-4">
