--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
       <p class="text-justify"><strong>Languages</strong></p>
       <p>[ Java - Python - JavaScipt - HTML5/CSS ]</p>
       <p class="text-justify"><strong>Libraries</strong></p>
-      <p>[ OpenCV - Numpy - scikit-learn - Pandas ]</p>
+      <p>[ OpenCV3 - Numpy - scikit-learn - Pandas ]</p>
       <p class="text-justify"><strong>Server/Database</strong></p>
       <p>[ Servlets - NodeJS ] ^ [ MySQL - MongoDB ]</p>
       <p class="text-justify"><strong>Course Electives</strong></p>
-      <p><small>[ Artificial Intelligence - Data Science - Robotics - Concurrent and Distributed Programming - Cryptography ]</small></p>
+      <p><small>[ Artificial Intelligence - Concurrent and Distributed Programming - Cryptography - Data Science - Robotics ]</small></p>
       <hr class="my-4">
     </div>
   </div>
