fix format issue adjusting to smaller screens

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 </nav>
 
 <body>
+
   <div class="container">
     <div id="about" class="jumbotron">
       <p class="lead">Graduating Undergraduate Computer Science Student at <em>California State University, Los Angeles</em></p>
@@ -91,9 +92,27 @@
   <div class="container">
     <div id="projects" class="row">
 
-      <div class="col-lg-4">
+      <div class="col-lg-4 col-md-12 col-xs-12">
+        <h2>RoboSub 2018</h2>
+        <p><a class="text-primary">Senior Design 2018 Project (CSULA)</a></p>
+        <p>
+          As team of computer science students we were tasked to develop requirements and build the software to run an autonomous underwater vehicle (AUV).
+          The software developed is comprised of two parts: Robot Operating System (ROS) and Computer Vision (CV).
+          Communication between hardware and software was accomplished with ROS.
+          Navigation with decision making was accomplished through object detection.
+          Which included image processing and machine learning.
+        </p>
+        <div class="col-xs-6 col-md-6">
+          <p><a class="btn btn-primary" href="https://csns.calstatela.edu/department/cs/project/view?id=6059788" target="_blank" role="button">View details &raquo;</a></p>
+        </div>
+        <div class="col-xs-6 col-md-6">
+          <p><a class="btn btn-primary" href="https://github.com/CSULA-RoboSub/Robosub2018" target="_blank" role="button">View Source &raquo;</a></p>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-12">
         <h2>Gate Detection</h2>
-        <p class="text-success">Object dection combining preprocessing techniques and machine learning</p>
+        <p><a class="text-success">Object detection combining preprocessing techniques and machine learning</a></p>
         <div class="col-xs-6 col-md-6">
           <a href="img/gate.jpg" target="_blank" class="thumbnail">
             <img src="img/gate.jpg" alt="gate-with-no-detection-markings">
@@ -105,15 +124,15 @@
           </a>
         </div>
 
-        <div class="col-xs-12 col-md-12">
-        <p>
+        <div class="col-xs-12 col-md-12 col-xs-12">
+          <p>
           OpenCV provided preprocessing techniques such as color filtering, thresholding, and contours detection.
           Results provided regions of interest (ROI) to minimize computation.
           Features were then extracted using the Histogram of Oriented Gradients(HOG).
           Training data was provided by the customer (Robsub).
           Scikit-learn provided the machine learning library.
           Support Vector Machines(SVM) was used to classify whether the ROI was a gate/bar.
-        </p>
+          </p>
         </div>
 
         <div class="col-xs-6 col-md-6">
@@ -124,29 +143,20 @@
         </div>
       </div>
 
-      <div class="col-lg-4">
-        <h2>RoboSub 2018</h2>
-        <p class="text-primary">Senior Design 2018 Project (CSULA)</p>
-        <p>
-          As team of computer science students we were tasked to develop requirements and build the software to run an autonomous underwater vehicle (AUV).
-          The software comprised of a robot operating system (ROS) and object detection.
-          Communication between hardware and software was accomplished with ROS.
-          While navigation with decision making was accomplished through object detection.
-          Which included image processing and machine learning.
-        </p>
-        <div class="col-xs-6 col-md-6">
-          <p><a class="btn btn-primary" href="https://csns.calstatela.edu/department/cs/project/view?id=6059788" target="_blank" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-xs-6 col-md-6">
-          <p><a class="btn btn-primary" href="https://github.com/CSULA-RoboSub/Robosub" target="_blank" role="button">View Source &raquo;</a></p>
-        </div>
-      </div>
-
-      <div class="col-lg-4">
+      <div class="col-lg-4 col-md-12 col-xs-12">
         <h2>Graffiti Report</h2>
         <p class="text-danger">Upload images of graffiti and acquire GPS location then use images for machine learning to train and recognize graffiti</p>
-        <p>After uploading images and location of graffiti, the information is added to a database while the images are preprocessed and used for machine learning. A classifier is built and trained to recognize graffiti letters. The information can then be used to map and locate hot spots of common graffiti locations.</p>
-        <p><a class="btn btn-primary" href="https://github.com/dannypadilla/Graffiti-Locator" target="_blank" role="button">View details &raquo;</a></p>
+        <p>
+          After uploading images and location of graffiti, the information is added to a database while the images are preprocessed and used for machine learning.
+          A classifier is built and trained to recognize graffiti letters.
+          The information can then be used to map and locate hot spots of common graffiti locations.
+        </p>
+        <div class="col-xs-6 col-md-6">
+          <p><a class="btn btn-primary" href="https://github.com/dannypadilla/Graffiti-Locator" target="_blank" role="button">View details &raquo;</a></p>
+        </div>
+        <div class="col-xs-6 col-md-6">
+          <p><a class="btn btn-primary" href="#" target="_blank" role="button">View Source &raquo;</a></p>
+        </div>
       </div>
 
     </div>
@@ -171,6 +181,7 @@
   </script>
 
 </body>
+
 </html>
 
 <!--
