add img template to projects

--- a/index.html
+++ b/index.html
@@ -94,7 +94,20 @@
 
       <div class="col-lg-4 col-md-12 col-xs-12">
         <h2>RoboSub 2018</h2>
-        <p><a class="text-primary">Senior Design 2018 Project (CSULA)</a></p>
+        <p><a class="text-primary">Senior Design Project 2018 (CSULA)</a></p>
+
+        <div id="images" class="col-lg-12">
+          <div class="col-xs-6 col-md-6">
+            <a href="#" target="_blank" class="thumbnail">
+              <img src="#" alt="robosub-img1">
+            </a>
+          </div>
+          <div class="col-xs-6 col-md-6">
+            <a href="#" target="_blank" class="thumbnail">
+              <img src="#" alt="robosub-img2">
+            </a>
+          </div>
+        </div>
 
         <div class="col-md-12 col-xs-12">
           <p>
@@ -116,17 +129,19 @@
 
       <div class="col-lg-4 col-md-12 col-xs-12">
         <h2>Gate Detection</h2>
-        <p><a class="text-success">Object detection combining preprocessing techniques and machine learning</a></p>
+        <p><a class="text-success">Computer Vision and Machine Learning</a></p>
 
-        <div class="col-xs-6 col-md-6">
-          <a href="img/gate.jpg" target="_blank" class="thumbnail">
-            <img src="img/gate.jpg" alt="gate-with-no-detection-markings">
-          </a>
-        </div>
-        <div class="col-xs-6 col-md-6">
-          <a href="img/gate-detection.png" target="_blank" class="thumbnail">
-            <img src="img/gate-detection.png" alt="gate-with-detection-boxes">
-          </a>
+        <div id="images" class="col-lg-12">
+          <div class="col-xs-6 col-md-6">
+            <a href="img/gate.jpg" target="_blank" class="thumbnail">
+              <img src="img/gate.jpg" alt="gate-with-no-detection-markings">
+            </a>
+          </div>
+          <div class="col-xs-6 col-md-6">
+            <a href="img/gate-detection.png" target="_blank" class="thumbnail">
+              <img src="img/gate-detection.png" alt="gate-with-detection-boxes">
+            </a>
+          </div>
         </div>
 
         <div class="col-md-12 col-xs-12">
@@ -150,7 +165,20 @@
 
       <div class="col-lg-4 col-md-12 col-xs-12">
         <h2>Graffiti Report</h2>
-        <p class="text-danger">Upload images of graffiti and acquire GPS location then use images for machine learning to train and recognize graffiti</p>
+        <p class="text-danger">Geolocation, Image Processing, and Machine Learning</p>
+
+        <div id="images" class="col-lg-12">
+          <div class="col-xs-6 col-md-6">
+            <a href="#" target="_blank" class="thumbnail">
+              <img src="#" alt="graffiti-img1">
+            </a>
+          </div>
+          <div class="col-xs-6 col-md-6">
+            <a href="#" target="_blank" class="thumbnail">
+              <img src="#" alt="graffiti-img2">
+            </a>
+          </div>
+        </div>
 
         <div class="col-md-12 col-xs-12">
           <p>
