--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Connect<span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li class="dropdown-header">Social</li>
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><a href="https://github.com/dannypadilla">GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/dannycpadilla/">LinkedIn</a></li>
+            <li><a href="https://stackoverflow.com/users/6052770/dannypadilla?tab=profile">Stack Overflow</a></li>
 
             <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><a href="https://www.hackerrank.com/dannypadilla">Hacker Rank</a></li>
 
             <li role="separator" class="divider"></li>
             <li><a href="#">One more separated link</a></li>
