update img links to reflect new folder structure

--- a/index.html
+++ b/index.html
@@ -98,15 +98,16 @@
 
         <div id="images" class="col-lg-12">
           <div class="col-xs-6 col-md-6">
-            <a href="#" target="_blank" class="thumbnail">
-              <img src="#" alt="robosub-img1">
+            <a href="https://youtu.be/XhsskkHWHig" target="_blank" class="thumbnail">
+              <img src="img/projects/robosub/gate_detect_whole.png" alt="robosub-img2">
             </a>
           </div>
           <div class="col-xs-6 col-md-6">
-            <a href="#" target="_blank" class="thumbnail">
-              <img src="#" alt="robosub-img2">
+            <a href="https://youtu.be/Ks9yKzjvy1g" target="_blank" class="thumbnail">
+              <img src="img/projects/robosub/gate_detect_red.png" alt="robosub-img1">
             </a>
           </div>
+
         </div>
 
         <div class="col-md-12 col-xs-12">
@@ -133,13 +134,13 @@
 
         <div id="images" class="col-lg-12">
           <div class="col-xs-6 col-md-6">
-            <a href="img/gate.jpg" target="_blank" class="thumbnail">
-              <img src="img/gate.jpg" alt="gate-with-no-detection-markings">
+            <a href="img/projects/gate_detection/gate.jpg" target="_blank" class="thumbnail">
+              <img src="img/projects/gate_detection/gate.jpg" alt="gate-with-no-detection-markings">
             </a>
           </div>
           <div class="col-xs-6 col-md-6">
-            <a href="img/gate-detection.png" target="_blank" class="thumbnail">
-              <img src="img/gate-detection.png" alt="gate-with-detection-boxes">
+            <a href="img/projects/gate_detection/gate-detection.png" target="_blank" class="thumbnail">
+              <img src="img/projects/gate_detection/gate-detection.png" alt="gate-with-detection-boxes">
             </a>
           </div>
         </div>
