--- a/index.html
+++ b/index.html
@@ -131,18 +131,10 @@
       <div class="col-lg-4 col-md-12 col-xs-12">
         <h2>Image Cropping Tool</h2>
         <p><a class="text-success">OpenCV, GUI, and Numpy</a></p>
-
         <div id="images" class="col-lg-12">
-          <div class="col-xs-6 col-md-6">
-            <a href="img/projects/gate_detection/gate.jpg" target="_blank" class="thumbnail">
-              <img src="img/projects/gate_detection/gate.jpg" alt="gate-with-no-detection-markings">
+            <a href="img/projects/image_crop_tool/image_crop_tool-gui.png" target="_blank" class="thumbnail">
+              <img src="img/projects/image_crop_tool/image_crop_tool-gui.png" alt="image-crop-tool-gui-interface">
             </a>
-          </div>
-          <div class="col-xs-6 col-md-6">
-            <a href="img/projects/gate_detection/gate-detection.png" target="_blank" class="thumbnail">
-              <img src="img/projects/gate_detection/gate-detection.png" alt="gate-with-detection-boxes">
-            </a>
-          </div>
         </div>
 
         <div class="col-md-12 col-xs-12">
@@ -160,7 +152,7 @@
           <p><a class="btn btn-primary" href="#" role="button">View Demo &raquo;</a></p>
         </div>
         <div class="col-xs-6 col-md-6">
-          <p><a class="btn btn-primary" href="https://github.com/dannypadilla/image-cropper-gui" role="button">View Source &raquo;</a></p>
+          <p><a class="btn btn-primary" href="https://github.com/dannypadilla/image-cropper-gui" target="_blank" role="button">View Source &raquo;</a></p>
         </div>
       </div>
 
@@ -190,10 +182,10 @@
         </div>
 
         <div class="col-xs-6 col-md-6">
-          <p><a class="btn btn-primary" href="https://github.com/dannypadilla/Graffiti-Locator" target="_blank" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-xs-6 col-md-6">
-          <p><a class="btn btn-primary" href="#" target="_blank" role="button">View Source &raquo;</a></p>
+          <p><a class="btn btn-primary" href="https://github.com/dannypadilla/Graffiti-Locator" target="_blank" role="button">View Source &raquo;</a></p>
         </div>
       </div>
 
