--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
             As team of computer science students we were tasked to develop requirements and build the software to run an autonomous underwater vehicle (AUV).
             The software developed is comprised of two parts: Robot Operating System (ROS) and Computer Vision (CV).
             Communication between hardware and software was accomplished with ROS.
-            Navigation with decision making was accomplished through object detection.
-            Which included image processing and machine learning.
+            Navigation with decision making is accomplished through CV using object detection.
+            Part of the CV pipeline includes image processing and machine learning.
           </p>
         </div>
 
@@ -131,10 +131,11 @@
       <div class="col-lg-4 col-md-12 col-xs-12">
         <h2>Image Cropping Tool</h2>
         <p><a class="text-success">OpenCV, GUI, and Numpy</a></p>
+
         <div id="images" class="col-lg-12">
-            <a href="img/projects/image_crop_tool/image_crop_tool-gui.png" target="_blank" class="thumbnail">
-              <img src="img/projects/image_crop_tool/image_crop_tool-gui.png" alt="image-crop-tool-gui-interface">
-            </a>
+          <a href="img/projects/image_crop_tool/image_crop_tool-gui.png" target="_blank" class="thumbnail">
+            <img src="img/projects/image_crop_tool/image_crop_tool-gui.png" alt="image-crop-tool-gui-interface">
+          </a>
         </div>
 
         <div class="col-md-12 col-xs-12">
@@ -161,16 +162,9 @@
         <p class="text-danger">Geolocation, Image Processing, and Machine Learning</p>
 
         <div id="images" class="col-lg-12">
-          <div class="col-xs-6 col-md-6">
-            <a href="#" target="_blank" class="thumbnail">
-              <img src="#" alt="graffiti-img1">
-            </a>
-          </div>
-          <div class="col-xs-6 col-md-6">
-            <a href="#" target="_blank" class="thumbnail">
-              <img src="#" alt="graffiti-img2">
-            </a>
-          </div>
+          <a href="img/projects/graffiti/graffiti_locate_gui.png" target="_blank" class="thumbnail">
+            <img src="img/projects/graffiti/graffiti_locate_gui.png" alt="graffiti-img1">
+          </a>
         </div>
 
         <div class="col-md-12 col-xs-12">
