add new social link

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <li><a href="https://www.hackerrank.com/dannypadilla">Hacker Rank</a></li>
 
             <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
+            <li><a href="https://twitter.com/DannyCPadilla?lang=en">Twitter</a></li>
           </ul>
         </li>
 
