update description to reflect recent grad

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
   <div class="container">
     <div id="about" class="jumbotron">
-      <p class="lead">Graduating Undergraduate Computer Science Student at <em>California State University, Los Angeles</em></p>
+      <p class="lead">Recent graduate in Computer Science at <em>California State University, Los Angeles</em> 2018</p>
       <hr class="my-4">
       <p class="text-justify"><strong>Languages</strong></p>
       <p>[ Java - Python - JavaScipt - HTML5/CSS ]</p>
