add to crop tool description

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           The ROI is then stored to disk as a jpg.
           A txt file is also created.
           The txt file contains the label and the coordinates (x, y, w, h) of the ROI.
-          If multiple ROI's exist in one image, the label and coordinates are appended to the end of the txt file.
+          If multiple ROI's exist in one image, the label and coordinates are appended to the end of the txt file corresponding to the image file name.
           </p>
         </div>
 
