--- a/index.html
+++ b/index.html
@@ -183,6 +183,33 @@
         </div>
       </div>
 
+      <div class="col-lg-4 col-md-12 col-xs-12">
+        <h2>Lupita'a Cafe</h2>
+        <p><a class="text-primary">Point of Sale (POS) system for beverages</a></p>
+
+        <div id="images" class="col-lg-12">
+          <div class="col-xs-12 col-md-12">
+            <a href="#" target="_blank" class="thumbnail">
+              <img src="img/projects/pos/pos_0.1.2.png" alt="pos-img">
+            </a>
+          </div>
+        </div>
+
+        <div class="col-md-12 col-xs-12">
+          <p>
+            The simple POS system is used for tracking finances and metrics based on sales each night.
+            A graphical user interface (GUI) is provided to simplify the beverage-ordering process.
+          </p>
+        </div>
+
+        <div class="col-xs-6 col-md-6">
+          <p><a class="btn btn-primary" href="#" target="_blank" role="button">View details &raquo;</a></p>
+        </div>
+        <div class="col-xs-6 col-md-6">
+          <p><a class="btn btn-primary" href="https://github.com/dannypadilla/lupitascafe" target="_blank" role="button">View Source &raquo;</a></p>
+        </div>
+      </div>
+
     </div>
   </div>
 
