add javafx to libs

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <p class="text-justify"><strong>Languages</strong></p>
       <p>[ Java - Python - JavaScipt - HTML5/CSS ]</p>
       <p class="text-justify"><strong>Libraries</strong></p>
-      <p>[ OpenCV3 - Numpy - scikit-learn - Pandas ]</p>
+      <p>[ JavaFx - OpenCV3 - Numpy - scikit-learn - Pandas ]</p>
       <p class="text-justify"><strong>Server/Database</strong></p>
       <p>[ Servlets - NodeJS ] ^ [ MySQL - MongoDB ]</p>
       <p class="text-justify"><strong>Course Electives</strong></p>
