--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
         <div id="images" class="col-lg-12">
           <div class="col-xs-12 col-md-12">
-            <a href="#" target="_blank" class="thumbnail">
+            <a href="img/projects/pos/pos_0.1.2.png" target="_blank" class="thumbnail">
               <img src="img/projects/pos/pos_0.1.2.png" alt="pos-img">
             </a>
           </div>
