--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
       </div>
 
       <div class="col-lg-4 col-md-12 col-xs-12">
-        <h2>Lupita'a Cafe</h2>
+        <h2>Lupita's Cafe</h2>
         <p><a class="text-primary">Point of Sale (POS) system for beverages</a></p>
 
         <div id="images" class="col-lg-12">
