--- a/index.html
+++ b/index.html
@@ -231,6 +231,11 @@
   document.getElementById("year").innerHTML = "&copy; " + full_name + date.getFullYear();
   </script>
 
+
+<!-- ads lol -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8983269515797764"
+crossorigin="anonymous"></script>
+
 </body>
 
 </html>
